--- a/src/app/workoutoverview/workout/tables/current-set/current-set.component.html
+++ b/src/app/workoutoverview/workout/tables/current-set/current-set.component.html
@@ -1,14 +1,63 @@
-<div class="siteWrapper"> <!--
+<div class="siteWrapper">
+  <!--
   <div *ngFor="let set of sets" class="entryBar">
     <p class="entryText">{{set["repetitions"]}} X {{set["weight"]}} Kg</p>
   </div>
   -->
+  <div class="formWrapper" *ngIf="this.updatedExercise && this.updatedExercise.setsContainer.length > 0">
+    <form [formGroup]="form" (ngSubmit)="onSubmit(form)">
 
-  <div *ngIf="this.updatedExercise && this.updatedExercise.setContainers.length > 0">
-    <div>
-      <h4>{{this.updatedExercise.setContainers[0].timeOfExercise}}</h4>
-      <p *ngFor="let set of this.updatedExercise.setContainers[0].exerciseSets">weight = {{set.weight}} X times = {{set.repetitions}}</p>
+        <div *ngFor="let city of cities.controls; index as i">
+
+          <div class="inputFieldsWrapper">
+            <div class="singleInputWrapper wrapper-left">
+              <button (click)="this.incrementRepetitions(i)" class="numberUpButton" type="submit"><img class="numberUpImage"
+                                                                src="../../../../../assets/pictures/menuButtons/playerButton.svg">
+              </button>
+              <div class="innerSetInputWrapper" formArrayName="cities">
+              <input type="number" class="setInput" step="1" min="1" max="" name="quantity" value="1" title="Qty"
+                     size="4"
+                     pattern="" inputmode="" [formControlName]="i" placeholder="City">
+              </div>
+              <button (click)="this.decrementRepetitions(i)" class="numberUpButton" type="submit"><img class="numberDownImage"
+                                                                src="../../../../../assets/pictures/menuButtons/playerButton.svg">
+              </button>
+            </div>
+            <div class="singleInputWrapper wrapper-center">
+              <img class="xTimes"
+                   src="../../../../../assets/pictures/menuButtons/crossProduct.svg">
+            </div>
+            <div class="singleInputWrapper wrapper-right">
+              <button (click)="this.incrementWeight(i)" class="numberUpButton" type="submit"><img class="numberUpImage"
+                                                                src="../../../../../assets/pictures/menuButtons/playerButton.svg">
+              </button>
+              <div class="innerSetInputWrapper" formArrayName="wei">
+              <input type="number" class="setInput" step="1" min="1" max="" name="quantity" value="1" title="Qty"
+                     size="4"
+                     pattern="" inputmode="" [formControlName]="i">
+              </div>
+              <button (click)="this.decrementWeight(i)" class="numberUpButton" type="submit"><img class="numberDownImage"
+                                                                src="../../../../../assets/pictures/menuButtons/playerButton.svg">
+              </button>
+            </div>
+            <div class="singleInputWrapper wrapper-center-right">
+              <span class="kgSpan">kg</span>
+            </div>
+            <button (click)="this.removeEntry(i)" class="removeEntryButton" type="submit">
+              <img class="numberDownImage"
+                   src="../../../../../assets/pictures/menuButtons/minusButton.svg">
+            </button>
+          </div>
+
+
+        </div>
+
+    </form>
+    <div class="inputFieldsWrapper">
+    <button (click)="this.addEntry()" class="addEntryButton" type="submit">
+      <img class="numberDownImage"
+           src="../../../../../assets/pictures/menuButtons/plusButton.svg">
+    </button>
     </div>
-
   </div>
 </div>
