--- a/src/app/workoutoverview/workout/tables/tables.component.css
+++ b/src/app/workoutoverview/workout/tables/tables.component.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   height: 100%;
+  background-color: RGB(250, 250, 250);
 }
 
 .content-div {
@@ -11,7 +12,6 @@
   max-width: 1000px;
   height: 100%;
   overflow: hidden;
-  border: solid black 1px;
 }
 
 .filter-div {
@@ -19,6 +19,7 @@
   height: 15%;
   border: solid black 1px;
   margin: 30px 0 30px 0;
+  background-color: white;
 }
 
 #wrappingContainer {
@@ -142,18 +143,19 @@ form {
   height: calc(85% - 60px);
   width: 100%;
   border: solid black 1px;
+  background-color: white;
 }
 
 .tableContainer {
   width: 100%;
-  height: 80%;
+  height: 84%;
   display: flex;
   flex-direction: row;
 }
 
 .motherBoard {
   width: 100%;
-  height: 10%;
+  height: 6%;
   padding: 0;
   margin: 0;
 }
@@ -167,9 +169,24 @@ form {
 
 }
 
-.exerciseTitle {
+.exerciseTitleWrapper {
   width: 100%;
   height: 10%;
+  display: flex;
   margin: 0;
   padding: 0;
+}
+.exerciseTitle {
+  margin: auto auto auto auto;
+}
+.nextButton {
+  display: inline;
+  cursor: pointer;
+  margin-left: calc(50% + 100px);
+}
+.endButton {
+  display: inline;
+  float: right;
+  margin-right: 100px;
+  cursor: pointer;
 }
