--- a/src/app/workoutoverview/workout/workout.component.css
+++ b/src/app/workoutoverview/workout/workout.component.css
@@ -8,10 +8,10 @@
 }
 @media (min-width: 768px) {
   .content-wrapper {
-
     width: 100%;
     margin: 0;
     padding: 0;
+    background-color: RGB(250, 250, 250);
   }
 }
 .content-div {
@@ -61,6 +61,7 @@
   height: 100px;
   border: solid black 1px;
   margin: 30px 0 30px 0;
+  background-color: white;
 }
 .collapsed {
   display: none;
@@ -77,6 +78,7 @@
 .centerContent {
   margin-left: auto;
   margin-right: auto;
+  background-color: white;
 }
 .phaseContainer {
   border-left: 3px solid black;
