--- a/src/app/workoutoverview/workoutoverview.component.css
+++ b/src/app/workoutoverview/workoutoverview.component.css
@@ -19,13 +19,16 @@
     width: 100%;
     margin: 0;
     padding: 0;
+    background-color: RGB(250, 250, 250);
   }
 
   .workoutgroupsinnderdivs {
     margin: 10px 10px 10px 10px;
     width:calc(50% - 20px);
+    height: 250px;
     box-sizing: border-box;
     overflow: hidden;
+    display: flex;
   }
 }
 .content-div {
@@ -39,6 +42,7 @@
 .previewImage {
   max-height: 100%;
   max-width: 100%;
+  margin: auto auto auto auto;
 }
 
 .pageFrame {
@@ -100,6 +104,7 @@ height: 100%;
   overflow: hidden;
   display: flex;
   flex-wrap: wrap;
+  background-color: white;
 }
 .groupTextHolder {
 
