--- a/src/app/workoutoverview/workout/tables/tables.component.css
+++ b/src/app/workoutoverview/workout/tables/tables.component.css
@@ -1,19 +1,10 @@
-.content-wrapper {
-
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  background-color: RGB(250, 250, 250);
-}
 
 .content-div {
   width: 100%;
   max-width: 1000px;
   height: 100%;
-  overflow: hidden;
-}
 
+}
 .filter-div {
   width: 100%;
   height: 15%;
@@ -21,122 +12,6 @@
   margin: 30px 0 30px 0;
   background-color: white;
 }
-
-#wrappingContainer {
-  display: flex;
-  flex-direction: column;
-  padding: 0px;
-  margin: 0px;
-  width: 100%;
-  height: calc(100% - 45px);
-  align-items: center;
-
-}
-
-.setInputWrapper {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.formWrapper {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.setInputButton[type = "submit"] {
-  border-radius: 25px;
-  border: 5px solid black;
-  margin-left: 20px;
-  display: inline-block;
-  color: green;
-  font-size: 20px;
-  font-weight: bold;
-  text-align: center;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.setInputButton[type = "button"] {
-  border-radius: 20px;
-  margin-left: 20px;
-  margin-bottom: auto;
-  margin-top: auto;
-  height: 100%;
-  padding: 0;
-  size: 50px;
-  font-size: 30px;
-  text-align: center;
-  font-weight: bold;
-  cursor: pointer;;
-}
-
-.checkmark {
-  color: green;
-  font-weight: bold;
-}
-
-.repetitionsX {
-  font-size: 25px;
-  font-weight: bold;
-}
-
-.weightKg {
-  font-size: 25px;
-  font-weight: bold;
-}
-
-.setInput {
-
-  text-align: center;
-  width: 50px;
-  font-size: 30px;
-  border: solid 2px black;
-  margin: 3px;
-  vertical-align: middle;
-  font-weight: bold;
-}
-
-form {
-  display: table-cell;
-  text-align: center;
-  vertical-align: middle;
-  display: flex;
-  height: 100%;
-}
-
-.inputFieldsWrapper {
-
-  margin-bottom: auto;
-  margin-top: auto;
-  display: flex;
-  vertical-align: center;
-  align-items: center;
-}
-
-.submitButtonWrapper {
-
-  width: 50%;
-  margin: auto auto;
-  padding: 0;
-  text-align: left;
-  vertical-align: middle;
-  display: flex;
-  display: table-cell;
-}
-
-
-.title {
-  font-weight: bold;
-}
-
-.currentAndLastComponent {
-  width: 100%;
-}
-
 .setDisplayWrapper {
   display: flex;
   flex-direction: column;
@@ -145,30 +20,6 @@ form {
   border: solid black 1px;
   background-color: white;
 }
-
-.tableContainer {
-  width: 100%;
-  height: 84%;
-  display: flex;
-  flex-direction: row;
-}
-
-.motherBoard {
-  width: 100%;
-  height: 6%;
-  padding: 0;
-  margin: 0;
-}
-
-.setContainer {
-
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-
-}
-
 .exerciseTitleWrapper {
   width: 100%;
   height: 10%;
@@ -179,14 +30,100 @@ form {
 .exerciseTitle {
   margin: auto auto auto auto;
 }
-.nextButton {
-  display: inline;
-  cursor: pointer;
-  margin-left: calc(50% + 100px);
+.tableContainer {
+  width: 100%;
+  height: 84%;
+  display: flex;
+  flex-direction: row;
 }
-.endButton {
-  display: inline;
-  float: right;
-  margin-right: 100px;
-  cursor: pointer;
+.setContainer {
+
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+
 }
+.setDisplayComponents {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  border-top: solid black 1px;
+  border-bottom: solid black 1px;
+  overflow: auto;
+}
+.lastSetComponent {
+  border-right: solid black 1px;
+}
+.motherBoard {
+  width: 100%;
+  height: 6%;
+  padding: 0;
+  margin: 0;
+}
+
+@media (max-width: 767px) {
+  .showIfMobile {
+    display: flex;
+    height:auto;
+    width: 100%;
+  }
+  .showIfNonMobile {
+    height:0;
+    width:0;
+  }
+  .nextButton {
+    display: inline;
+    cursor: pointer;
+    margin-left: 100px;
+  }
+  .endButton {
+    display: inline;
+    float: right;
+    margin-right: 100px;
+    cursor: pointer;
+  }
+  .content-wrapper {
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+    overflow: auto;
+    align-items: center;
+    background-color: RGB(250, 250, 250);
+  }
+}
+@media (min-width: 768px) {
+  .showIfMobile {
+    height:0;
+    width:0;
+  }
+  .showIfNonMobile {
+    height:100%;
+    width: 100%;
+  }
+  .nextButton {
+    display: inline;
+    cursor: pointer;
+    margin-left: calc(50% + 100px);
+  }
+  .endButton {
+    display: inline;
+    float: right;
+    margin-right: 100px;
+    cursor: pointer;
+  }
+  .content-wrapper {
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+    height: calc(100% - 45px);
+    align-items: center;
+    background-color: RGB(250, 250, 250);
+  }
+}
+
