stream field fixed

--- a/src/app/workoutoverview/workout/tables/tables.component.html
+++ b/src/app/workoutoverview/workout/tables/tables.component.html
@@ -2,7 +2,8 @@
 
 <div class="d-flex justify-content-center content-wrapper">
   <div class="content-div">
-    <div class="filter-div">
+    <div class="filter-div justify-content-center d-flex">
+      <p style="text-align: center; margin: auto;"> Stream coming soon </p>
     </div>
     <div class="setDisplayWrapper">
       <div class="exerciseTitleWrapper">
