--- a/src/app/workoutoverview/workout/tables/tables.component.css
+++ b/src/app/workoutoverview/workout/tables/tables.component.css
@@ -7,7 +7,7 @@
 }
 .filter-div {
   width: 100%;
-  height: 15%;
+  height: 100px;
   border: solid black 1px;
   margin: 30px 0 30px 0;
   background-color: white;
@@ -15,7 +15,7 @@
 .setDisplayWrapper {
   display: flex;
   flex-direction: column;
-  height: calc(85% - 60px);
+  height: calc(85% - 160px);
   width: 100%;
   border: solid black 1px;
   background-color: white;
