--- a/src/app/features/new-workout/new-workout.component.css
+++ b/src/app/features/new-workout/new-workout.component.css
@@ -1,6 +1,30 @@
-.formWrapper {
-
+.post-type-frame {
+  margin-top: 50px;
+  display: flex;
+  width: 100%;
+  height: 50px;
+  border: solid black 2px;
 }
-.inputFieldsRowWrapper {
-
+.post-type-image {
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
+}
+.workout-post-image {
+  margin-left: 50px;
+}
+.simple-post-image {
+  float: right;
+  margin-right:50px;
+}
+.workout-post-frame {
+  background: aqua;
+  width: 50%;
+}
+.simple-post-frame {
+  width:50%;
+  background: #099FDF;
+}
+.post-creation-wrapper {
+  border: solid black 1px;
 }
