--- a/src/app/features/workout-list/workout.component.css
+++ b/src/app/features/workout-list/workout.component.css
@@ -1,51 +1,3 @@
-@media (max-width: 767px) {
-  .content-wrapper {
-
-    width: 100%;
-    margin: 0;
-    padding: 0;
-  }
-}
-@media (min-width: 768px) {
-  .content-wrapper {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    background-color: RGB(250, 250, 250);
-  }
-}
-.content-div {
-  width: 100%;
-  max-width: 1000px;
-  height: 100%;
-  overflow: hidden;
-}
-
-.groupBox {
-  background: linear-gradient(to bottom, #FFFFFF 0, #FAB149 2%, #F89406 100%) repeat scroll 0 0 transparent;
-  border: 1px solid #FAB149;
-  -ms-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-box-shadow: 0 1px 2px #999999;
-  -ms-box-shadow: 0 1px 2px #999999;
-  box-shadow: 0 1px 2px #999999;
-  color: #FFFFFF;
-  cursor: pointer;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 45px;
-  font-weight: bold;
-  -ms-text-shadow: 0 -1px #099FDF;
-  text-shadow: 0 -1px #099FDF;
-  margin: 4px;
-  height: 60px;
-  width: 320px;
-  vertical-align: center;
-  align-items: center;
-  text-decoration: none;
-  display: inline-block;
-  text-align: center;
-}
-
 .innerWrapperDepth2 {
   width: 100%;
   display: block;
@@ -56,13 +8,6 @@
 
 }
 
-.filter-div {
-  width: 100%;
-  height: 100px;
-  border: solid black 1px;
-  margin: 30px 0 30px 0;
-  background-color: white;
-}
 .collapsed {
   display: none;
 }
@@ -105,5 +50,6 @@ h4 {
   height: 20px;
 }
 .workoutsContainer {
-  padding-bottom: 100px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
