--- a/src/app/features/new-workout/new-workout.component.css
+++ b/src/app/features/new-workout/new-workout.component.css
@@ -28,3 +28,22 @@
 .post-creation-wrapper {
   border: solid black 1px;
 }
+#file-input-wrapper {
+  border: 1px solid black;
+  margin: auto;
+  width: 500px;
+  height: 400px;
+  overflow: hidden;
+
+}
+#file-input {
+  display: none;
+}
+.file-input-default-image {
+  width: 100%;
+  height: 100%;
+}
+#file-input-image {
+  min-width: 100%;
+  min-height: 100%;
+}
