--- a/src/app/features/new-workout/new-workout.component.css
+++ b/src/app/features/new-workout/new-workout.component.css
@@ -18,12 +18,10 @@
   margin-right:50px;
 }
 .workout-post-frame {
-  background: aqua;
   width: 50%;
 }
 .simple-post-frame {
   width:50%;
-  background: #099FDF;
 }
 .post-creation-wrapper {
   border: solid black 1px;
@@ -33,17 +31,64 @@
   margin: auto;
   width: 500px;
   height: 400px;
-  overflow: hidden;
-
+  overflow: visible;
+  display: flex;
 }
 #file-input {
   display: none;
 }
 .file-input-default-image {
-  width: 100%;
-  height: 100%;
+  height: 50%;
+  opacity: 30%;
 }
-#file-input-image {
-  min-width: 100%;
-  min-height: 100%;
+.file-input-default-image-label {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+.workout-data-creation-wrapper {
+  width: 100%;
+  height: 200px;
+  border: black solid 1px;
+  margin: auto;
+  width: 500px;
+  display: flex;
+
+}
+.days-bar {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  padding-top: 0;
+  height: 40px;
+  display: flex;
+}
+.add-button {
+  background-image: url(
+  '../../../assets/pictures/menuButtons/menuPlus.svg');
+  background-size: cover;
+  width: 40px;
+  height: 40px;
+  background-color: Transparent;
+  background-repeat:no-repeat;
+  cursor:pointer;
+  overflow: hidden;
+  outline:none;
+  border: none;
+}
+.day-button {
+  width: 40px;
+  height: 40px;
+
+  margin-top: 0;
+  padding-top: 0;
+  cursor:pointer;
+  overflow: hidden;
+
+
+}
+.day-button-text {
+  padding: 0px;
+  margin: 0px;
 }
