--- a/src/app/features/workout-list/workout.component.html
+++ b/src/app/features/workout-list/workout.component.html
@@ -4,7 +4,7 @@
 
   <div class="content-div">
     <div *ngFor="let set of this.getWorkouts(); index as i" class="workoutsContainer">
-      <div class = "centerContent" style="width: 400px; border: solid 1px black">
+      <div class = "centerContent frame-content">
         <h2 class="centerContent"
            style="text-align: center;">{{set["name"]}}</h2>
         <img class="centerContent imageLimiter img-thumbnail"
