private var to get

--- a/src/app/features/new-workout/exercise-picker/exercise-picker.component.html
+++ b/src/app/features/new-workout/exercise-picker/exercise-picker.component.html
@@ -4,8 +4,8 @@
   <div class="content-div">
     <div class="filter-container"></div>
 
-    <div class="exercise-container align-content-center text-center" *ngFor="let exercise of this.exercises">
-      <p class="text-center-p">{{this.getExercise()}}</p>
+    <div class="exercise-container align-content-center text-center" *ngFor="let exercise of this.getExercise()">
+      <p class="text-center-p">exercise: {{exercise}}</p>
     </div>
   </div>
 </div>
